Fix logic and increment version
